[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/title/title_screen.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/arcade_classic.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/sfx/powerup.wav" type="AudioStream" id=3]
[ext_resource path="res://levels/main.gd" type="Script" id=4]
[ext_resource path="res://assets/music/title_theme.ogg" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 1440, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 1920, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 2400, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 2880, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 3360, 0, 480, 270 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=10]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "hide_scene"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="StartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 240, 136 )
frames = SubResource( 9 )
frame = 3
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.823718 )
margin_top = 184.0
margin_right = 480.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 2 )
text = "CLICK   ANYWHERE   TO   START"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
pause_mode = 2
playback_default_blend_time = 0.01
method_call_mode = 1
"anims/New Anim" = SubResource( 10 )

[node name="Cover" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 1.0
margin_right = 480.0
margin_bottom = 271.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 240, 135 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cover"]
anims/hide_scene = SubResource( 11 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.049

[connection signal="finished" from="StartSound" to="." method="_on_StartSound_finished"]
[connection signal="animation_finished" from="Cover/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
